# pii-gateway

./: .cursorrules  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  PROJECT.md  README.md  architecture.plan.md  docker-compose.example.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
config/examples/: config.example.yaml
docs/: architecture.mmd  view-architecture.html
src/pii_gateway/: __init__.py  config_loader.py  logging_config.py  main.py  policy_schema.py  settings.py  state_store.py
src/pii_gateway/api/: auth.py  middleware.py  routes_internal.py  routes_sanitize.py  schemas.py
src/pii_gateway/connectors/: __init__.py  batch_csv_pandas.py  batch_json_array.py  batch_postgres_sqlalchemy.py  s3_inbox.py
src/pii_gateway/core/: __init__.py  entity_summary.py  sanitize_pipeline.py  sanitize_structured.py  sanitize_text.py
src/pii_gateway/jobs/: __init__.py  batch_common.py  file_ingest.py  postgres_batch_job.py  scheduler.py
src/pii_gateway/storage/: __init__.py  local_volume_backend.py  outbound_interface.py  paths.py  s3_compatible_backend.py
tests/: conftest.py
tests/integration/: test_api_sanitize.py  test_correlation_header.py  test_internal_jobs.py
tests/unit/: test_auth.py  test_batch_csv.py  test_batch_json_array.py  test_config_loader.py  test_core_no_logging.py  test_entity_summary.py  test_paths.py  test_postgres_stream.py  test_sanitize_structured.py  test_sanitize_text.py  test_storage_factory.py
